k8s/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/part-of: lecture-1
spec:
  parentRefs:
    - name: main-envoy-gateway
      namespace: gateway
      sectionName: http
  hostnames:
    - "${INGRESS_HOST}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: api
          port: 4000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web
          port: 3000
